--- a/ConversorTemperatura/app/src/main/res/layout/activity_main.xml
+++ b/ConversorTemperatura/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,10 @@
     android:padding="8dp"
     tools:context=".MainActivity">
 
+
+
     <EditText
-        android:id="@+id/text_temperatura"
+        android:id="@+id/text_temp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -19,17 +21,37 @@
         android:textColor="#191970"
         android:textSize="24sp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:orientation="horizontal">
 
     <Button
         android:id="@+id/button_converterC"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="64dp"
+        android:layout_gravity="right"
+        android:layout_weight="1"
+        android:layout_marginStart="10dp"
         android:textColor="#000"
+        android:padding="8dp"
         android:backgroundTint="#D3D3D3"
-        android:text="Converter para Celcius" />
+        android:text="Celcius" />
 
+    <Button
+        android:id="@+id/button_converterF"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_weight="1"
+        android:layout_marginStart="10dp"
+        android:textColor="#000"
+        android:padding="8dp"
+        android:backgroundTint="#D3D3D3"
+        android:text="Fahrenheit" />
+
+    </LinearLayout>
     <TextView
         android:id="@+id/view_saida_Conversao"
         android:layout_width="wrap_content"
